Adjust SYNOPSIS to match actual design.

--- a/share/man/man4/bt.4
+++ b/share/man/man4/bt.4
@@ -32,10 +32,9 @@ The
 .Ox
 .Nm
 driver has four layers :
-the bus, the controller, the host, and the device layer.
+the bus (abstracted), the controller (HCI), the host, and the device layer.
 .Sh SEE ALSO
-.Xr bthci 4 ,
-.Xr obt 4
+.Xr bthci 4
 .Sh HISTORY
 The
 .Nm
