--- a/share/man/man4/bthci.4
+++ b/share/man/man4/bthci.4
@@ -21,18 +21,17 @@
 .Nm bthci
 .Nd Bluetooth Host Controller Interface 
 .Sh SYNOPSIS
-.Cd "bthci* at ubt?"
-.Cd "obt* at bthci?"
+.Cd "bthci* at uhub?"
+.Cd "bt* at bthci?"
 .Sh DESCRIPTION
 The
 .Nm
 driver provides support for the Bluetooth Host Controller Interface, which
 provide an interface to
-.Xr obt 4
+.Xr bt 4
 devices.
 .Sh SEE ALSO
-.Xr ubt 4 ,
-.Xr obt 4
+.Xr bt 4
 .Sh HISTORY
 The
 .Nm
