--- a/share/man/man9/bthci.9
+++ b/share/man/man9/bthci.9
@@ -69,6 +69,9 @@ implement asynchronous interrupt abstraction queue throught
 .Xr pool 9 ,
 .Xr queue 3 and
 .Xr tsleep 9 .
+Note that some commands return a work in progress state while performing the
+required task on the controller, thus they are asynchronous and will generate
+further events to notify the host of the task state.
 .Pp
 The
 .Nm bthci_init()
@@ -92,8 +95,8 @@ layer which will return theim later to the pool.
 .Pp
 The
 .Nm bthci_write_evt()
-function catch hci command events or queue theim for higher layer and wakeup the
-appropriate sleep handle.
+function catch hci command event or queue it for higher layer and it wakeup the
+appropriate sleep identifier.
 .Pp
 The
 .Nm bthci_read_evt()
@@ -115,6 +118,7 @@ event. Those functions sleep and must be called only from process context.
 .Xr bluetooth 4
 .Xr mutex 9
 .Xr pool 9
+.Xr queue 3
 .Xr tsleep 9
 .Sh HISTORY
 The bthci manager appeared in
