Introduice btconfig(8) with DIOCBTINFO.

--- a/sbin/btconfig/btconfig.8
+++ b/sbin/btconfig/btconfig.8
@@ -16,3 +16,37 @@
 .\"
 .Dd $Mdocdate$
 .Dt BTCONFIG 8
+.Os
+.Sh NAME
+.Nm btconfig
+.Nd configure bluetooth controller and devices
+.Sh SYNOPSIS
+.Nm btconfig
+.Op Fl v
+.Oo
+.Ar device
+.Oo
+.Ar command
+.Op Ar parameter
+.Oc
+.Oc
+.Sh DESCRIPTION
+The
+.Nm
+utility is used to identify bluetooth controllers and devices and manager their
+associations.
+.sh EXAMPLES
+XXX todo
+.Sh SEE ALSO
+.Xr bluetooth 4
+.Sh HISTORY
+The
+.Nm
+command appeared in
+.Ox 6.8 .
+.Sh AUTHORS
+.An -nosplit
+The
+.Nm
+command was written by
+.An Fabien Romano Aq Mt fabien@openbsd.org .
