Implement btconfig [-o] [device|unit]. Update bluetooth ioctl api accordingly and add bdaddr into info. Simplify bluetooth error code to be compatible with standard errno. Various fix and improvements.

--- a/sbin/btconfig/btconfig.8
+++ b/sbin/btconfig/btconfig.8
@@ -22,9 +22,9 @@
 .Nd configure bluetooth controller and devices
 .Sh SYNOPSIS
 .Nm btconfig
-.Op Fl v
+.Op Fl oqimadr
 .Oo
-.Ar device
+.Ar device|unit
 .Oo
 .Ar command
 .Op Ar parameter
