Add M_BLUETOOTH in malloc(9).

--- a/share/man/man9/malloc.9
+++ b/share/man/man9/malloc.9
@@ -241,6 +241,8 @@ Argument lists & other mem used by exec.
 Miscellaneous FS mount structures.
 .It Dv M_FUSEFS
 FUSE FS mount structures.
+.It Dv M_BLUETOOTH
+Bluetooth structures.
 .It Dv M_PFKEY
 Pfkey data.
 .It Dv M_TDB
